<resources>
    <string name="app_name">Rick and Morty app</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_login_hint">Enter login</string>
    <string name="exit">Exit</string>
    <string name="search">Search</string>
    <string name="character_name_example">Rick</string>
    <string name="status">Status:</string>
    <string name="name">name</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="created">Created:</string>
    <string name="back">Back to character list</string>
    <string name="save">save</string>
    <string name="clear">clear</string>
    <string name="cancel">cancel</string>
    <string name="clear_button_text">Clear user data</string>
    <string name="view_pager">View Pager</string>
</resources>