<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".presentation.ui.signup.SignUpFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="@color/hint_color"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        android:hint="@string/enter_login_hint"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bSignUpAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:background="@color/pink"
        android:textColor="@color/black"
        android:text="@string/sign_up" />


</FrameLayout>